<resources>
    <string name="app_name">UntitledDiscordBot</string>
    <string name="app_title">UDB</string>
    <string name="app_extended_title">Untitled Discord Bot</string>
    <string name="login_with_discord">Login with Discord</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="commands">Commands</string>
    <string name="logout">Logout!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_server">Choose server</string>
    <string name="info_2">Make sure you have manage server permissions and that you are logged into the right account.</string>
    <string name="info_1">To add this bot to your server, click \"choose server\" above this message then afterwards select it in the \"select server\" bottom shelf menu.</string>
    <string name="news_and_updates"><![CDATA[News & Updates]]></string>
    <string name="informations">Information</string>
    <string name="role">Role:</string>
    <string name="add_to_server">Click here to add UDB to your server</string>
    <string name="already_added">Already added </string>
    <string name="missing_permissions">Missing permissions</string>
    <string name="nothing_to_see_here">Nothing to see here\nI\'ll do my best to keep you updated\n\nAfter my prolonged nap</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="log_out">Log Out</string>
    <string name="not_available">This feature is not yet available.\n\n Gimme some sleep</string>
    <string name="server_prefix">Server prefix:</string>
    <string name="role_info">Role info</string>
    <string name="require_one_of_roles_info">Require one of these roles</string>
    <string name="require_one_of_roles_value">Users without one of these roles won\'t be able to use commands.</string>
    <string name="none_selected">None selected</string>
    <string name="ignore_users_with_one_of_these_roles">Ignore users with one of these roles</string>
    <string name="role_ignored">Users with an ignored role won\'t be able to use commands, even if they have a required role.</string>
    <string name="global_server_info">Global Server Info</string>
    <string name="an_unexpected_error_occurred">An unexpected error occurred</string>
    <string name="auto_retry_in">Auto retry in:</string>
    <string name="command_prefix">Command Prefix</string>
    <string name="note_prefix">Note: Changing the prefix does not change the flag usage in commands. They will still begin with “<font color='@color/red'>-</font>”</string>
    <string name="prefix">Input your prefix</string>
    <string name="example_command_usage">Example command usage:</string>
    <string name="rolemenu_create_name_nodm">-rolemenu create &lt;name&gt; -nodm</string>
    <string name="core_settings">Core settings</string>
    <string name="change_selection">Change selection</string>
    <string name="auto_delete_settings">Auto-delete settings</string>
    <string name="auto_delete_trigger_after_seconds">Auto delete trigger after</string>
    <string name="auto_delete_response_after_seconds">Auto delete response after</string>
    <string name="trigger_info">Sets whether trigger/response should be deleted after certain period of time</string>
    <string name="choose_roles">Choose roles</string>
    <string name="nothing_found_search">Nothing found\nChange search query</string>
    <string name="select_settings">Select settings</string>
    <string name="channel_permission">Channel permission</string>
    <string name="channels_with_configured_permissions">Channels with configured permissions</string>
    <string name="edit_channels">Edit channels</string>
    <string name="save">SAVE</string>
    <string name="toggle_welcome_channel">Toggle welcome\nchannel</string>
    <string name="roles">Roles</string>
    <string name="members">Members</string>
    <string name="channel_info">Channel info</string>
    <string name="this_channel_is_set_to_be_a_default_one_for_sending_messages">This channel is set to be a default one for sending messages</string>
</resources>