<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:exb_color="@color/active_color" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:exb_color="@color/active_color" />
    <item
        android:id="@+id/music"
        android:icon="@drawable/ic_music"
        android:title="@string/music"
        app:exb_color="@color/active_color" />
    <item
        android:id="@+id/commands"
        android:icon="@drawable/ic_commands"
        android:title="@string/commands"
        app:exb_color="@color/active_color" />

</menu>