<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/dp_8"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/surface_dark_grey"
    app:cardCornerRadius="@dimen/dp_16"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_24"
        android:paddingTop="@dimen/dp_16"
        android:paddingRight="@dimen/dp_24"
        android:paddingBottom="@dimen/dp_16">

        <TextView
            style="@style/myFontStyle.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_6"
            android:text="@string/command_prefix"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

        <TextView
            style="@style/myFontStyle.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_prefix"
            android:textSize="@dimen/text_very_small"
            android:paddingBottom="@dimen/dp_16"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/prefix_input_layer"
            style="@style/inputLayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prefix_input_edit_text"
                style="@style/myFontStyle.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prefix"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:text="-"
                android:textColor="@color/active_color"
                android:textSize="@dimen/text_medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <TextView
                style="@style/myFontStyle.Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/example_command_usage"
                android:textSize="@dimen/text_very_small"
                android:layout_weight="1"
                android:textStyle="bold" />

            <TextView
                style="@style/myFontStyle.Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rolemenu_create_name_nodm"
                android:textSize="@dimen/text_very_small"
                android:id="@+id/example_command"
                android:textAlignment="viewEnd"
                android:textColor="@color/check_red"
                android:layout_weight="1"
                android:textStyle="bold" />



        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>