<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:elevation="@dimen/padding_8"
    app:cardBackgroundColor="@color/surface_dark_grey"
    app:cardCornerRadius="@dimen/dp_16"
    app:strokeWidth="0dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_24"
        android:paddingTop="@dimen/dp_16"
        android:paddingRight="@dimen/dp_24"
        android:paddingBottom="@dimen/dp_16">


        <TextView
            android:id="@+id/role_label"
            style="@style/myFontStyle.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_16"
            android:text="@string/auto_delete_settings"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_4"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <TextView
                        style="@style/myFontStyle.Regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:paddingBottom="@dimen/dp_4"
                        android:text="@string/auto_delete_trigger_after_seconds"
                        android:textSize="@dimen/text_tiny"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_4"
                        android:orientation="horizontal">

                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/delete_trigger_switch"
                            android:layout_width="wrap_content"
                            android:checked="false"
                            style="@style/mySwitch"
                            android:layout_height="wrap_content"
                            android:scaleX="0.8"
                            android:scaleY="0.8" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/delete_trigger_input_layer"
                            style="@style/inputLayer"
                            android:layout_width="0dp"
                            app:counterEnabled="true"
                            app:counterMaxLength="2"
                            android:layout_height="@dimen/dp_48"
                            android:layout_weight="2">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/delete_trigger_edit_text"
                                style="@style/myFontStyle.Regular"
                                android:layout_width="match_parent"
                                android:maxLength="2"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:textColor="@color/active_color"
                                android:textSize="@dimen/text_medium" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <TextView
                        style="@style/myFontStyle.Regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:paddingBottom="@dimen/dp_4"
                        android:text="@string/auto_delete_response_after_seconds"
                        android:textSize="@dimen/text_tiny"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/delete_response_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleX="0.8"
                            style="@style/mySwitch"
                            android:scaleY="0.8" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/delete_response_input_layer"
                            style="@style/inputLayer"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/dp_48"
                            app:counterEnabled="true"
                            app:counterMaxLength="2"
                            android:layout_weight="2">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/delete_response_edit_text"
                                style="@style/myFontStyle.Regular"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:maxLength="2"
                                android:textColor="@color/active_color"
                                android:textSize="@dimen/text_medium" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <TextView
            style="@style/myFontStyle.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/trigger_info"
            android:textSize="@dimen/text_tiny"
            android:textStyle="italic" />


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>